--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 html{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: aliceblue;
+    color: rgb(223, 227, 231);
 }
 body{
     width: 100vw;
